todoform invisible done

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
       </div>
       <form class="js-form form">
         <input type="text" style="color:white" placeholder="what's your name?"/>
+        <div class="underline"></div>
       </form>
     </div>
-    <!-- <h4 class="js-greetings greetings"></h4>
+    <h4 class="js-greetings greetings"></h4>
     <form class="js-toDoForm">
       <input type="text" placeholder="해야 할 일을 입력해보세요" />
     </form>
     <ul class="js-toDoList">
-    </ul> -->
+    </ul>
     <div class="js-weather">
-      <span class="tempWeather"></span>
       <span class="location"></span>
+      <span class="tempWeather"></span>
     </div>
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
