checkbox strikethrough build

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta nharset="uft-8"/>
     <title>To-do list</title>
-    <meta nharset="uft-8" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,13 +14,17 @@
         <input type="text" style="color:white" placeholder="what's your name?"/>
         <div class="underline"></div>
       </form>
+      <h4 class="js-greetings greetings"></h4>
+      <form class="js-toDoForm">
+        <input type="text" style="color:white" />
+        <div class="underline2"></div>
+      </form>
+      <div class="outer">
+        <div class="listDiv">
+          <ul class="js-toDoList"></ul>
+        </div>p
+      </div>
     </div>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="해야 할 일을 입력해보세요" />
-    </form>
-    <ul class="js-toDoList">
-    </ul>
     <div class="js-weather">
       <span class="location"></span>
       <span class="tempWeather"></span>
