meta charset issue has been solved

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta nharset="uft-8"/>
+    <meta charset="utf-8"/>
     <title>To-do list</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -22,7 +22,7 @@
       <div class="outer">
         <div class="listDiv">
           <ul class="js-toDoList"></ul>
-        </div>p
+        </div>
       </div>
     </div>
     <div class="js-weather">
